<resources>
    <string name="app_name">Nmedia</string>
    <string name="nmedia">Нетология. Университет интернет-профессий будущего</string>
    <string name="info" translatable="false">"Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растем сами и помогает расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb "</string>
    <string name="date" translatable="false">21 мая в 18:36</string>
    <string name="likes" translatable="false">10</string>
    <string name="views" translatable="false">5</string>
    <string name="share" translatable="false">5</string>
    <string name="hint">Введите текст</string>
    <string name="edit">Редактировать</string>
    <string name="remove">Удалить</string>
    <string name="editText" translatable="false">Редактирование</string>
    <string name="edit_icon" translatable="false">edit_icon</string>
    <string name="editing">Редактирование</string>
    <string name="sample_text" translatable="false">sample_text</string>
    <string name="cancel">cancel</string>
    <string name="chooser_share_post" translatable="false">Share post</string>
    <string name="error_empty_content" translatable="false">Контент не может быть пустым</string>
    <string name="save" translatable="false">Save</string>
    <string name="play" translatable="false">Play video</string>
</resources>