<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:listitem="@layout/card_post" />

    <FrameLayout
        android:id="@+id/editingPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/editIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/edit_icon"
                    android:src="@android:drawable/ic_menu_edit" />

                <!-- Текст "редактирование" -->
                <TextView
                    android:id="@+id/editTextLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="8dp"
                    android:text="@string/editing"
                    android:textStyle="bold" />

                <!-- Кнопка отмены -->
                <ImageButton
                    android:id="@+id/cancelButton"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/cancel"
                    android:src="@android:drawable/ic_menu_close_clear_cancel" />
            </LinearLayout>

            <!--Начало редактируемого текста -->
            <TextView
                android:id="@+id/editionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/sample_text"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>
    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />


</androidx.constraintlayout.widget.ConstraintLayout>